# DHAP

./: .gitignore  .gitmodules  CMakeLists.txt  DistConfig.md  Dockerfile  Dockerfile.dist  LICENSE  Makefile  README.md  ae-command.md  run.sh
compiler/: CMakeLists.txt
compiler/include/mlir-support/: eval.h  offloader.h
compiler/include/mlir/Conversion/DSAToStd/: CollectionIteration.h
compiler/include/mlir/Conversion/LoopToGDSA/: CUDAGenerator.h  LoopToGDSAPass.h  TranslateLoop.h
compiler/include/mlir/Conversion/RelAlgToLoop/: FuseLoop.h  InsertShfl.h  Planner.h  RelAlgToLoopPass.h  UnrollRelAlg.h  UpdateCols.h
compiler/include/mlir/Dialect/: CMakeLists.txt
compiler/include/mlir/Dialect/GDSA/IR/: CMakeLists.txt  GDSADialect.h  GDSAInterfaces.td  GDSAOps.h  GDSAOps.td  GDSAOpsInterfaces.h  GDSATypes.h
compiler/include/mlir/Dialect/Loop/IR/: CMakeLists.txt  LoopDialect.h  LoopInterfaces.td  LoopOps.h  LoopOps.td  LoopOpsInterfaces.h  LoopTypes.h
compiler/include/mlir/Dialect/RelAlg/: ColumnSet.h  Passes.h
compiler/include/mlir/Dialect/RelAlg/IR/: ColumnManager.h  util.h
compiler/include/mlir/Dialect/RelAlg/Transforms/queryopt/: QueryGraph.h
compiler/include/runner/: runner.h
compiler/include/runtime/: ArrowDirDatabase.h  Database.h  ExternalArrowDatabase.h  MetaDataOnlyDatabase.h  TableBuilder.h  metadata.h
compiler/lib/Conversion/DSAToStd/: CollectionIterators.cpp  CollectionsToStdPatterns.cpp
compiler/lib/Conversion/LoopToGDSA/: CMakeLists.txt  CUDAGenerator.cpp  GenerateCUDA.cpp  LowerToGDSA.cpp  TranslateLoop.cpp
compiler/lib/Conversion/RelAlgToLoop/: CMakeLists.txt  FuseLoop.cpp  GeneratePlan.cpp  InsertShfl.cpp  LowerToLoop.cpp  SplitRelAlg.cpp  Subquery.cpp  UnrollRelAlg.cpp
compiler/lib/GDSA/: CMakeLists.txt  GDSADialect.cpp  GDSAOps.cpp  GDSATypes.cpp
compiler/lib/Loop/: CMakeLists.txt  LoopDialect.cpp  LoopOps.cpp  LoopTypes.cpp
compiler/lib/RelAlg/: CMakeLists.txt  ColumnManager.cpp  util.cpp
compiler/lib/RelAlg/Transforms/: Offload.cpp
compiler/lib/mlir-support/: CMakeLists.txt  offloader.cpp
compiler/lib/runner/: result_formatting.cpp  runner.cpp
compiler/lib/runtime/: ArrowDirDatabase.cpp  DataSourceIteration.cpp  Database.cpp  MetaData.cpp  StringRuntime.cpp  TableBuilder.cpp
compiler/tools/: CMakeLists.txt
compiler/tools/build-tools/: CMakeLists.txt
compiler/tools/mlir-tools/: CMakeLists.txt  dhap-compiler.cpp  run-mlir.cpp  run-sql.cpp
generate/: ssb.sh  ssb_dbgen.sh  tpch.sh
generate/ssb_dbgen/: dbgen  qgen
generate/tpcds_dbgen/tools/: .ctags_updated  QgenMain.c  checksum  distcomp  dsdgen  dsqgen  makefile  mkheader  qgen.y  s_catalog_order.c  s_catalog_page.c  s_purchase.c  s_store_returns.c  s_warehouse.c  s_web_order_lineitem.c  s_web_site.c  w_catalog_page.c  w_warehouse.c  w_web_site.c  y.tab.c  y.tab.h
generate/tpch_dbgen/: dbgen  qgen
resources/data/csv/exp-test/: builda.tbl  buildb.tbl  buildc.tbl  buildd.tbl  metadata.json  probe.tbl
resources/data/csv/ssb-test/: customer.tbl  date.tbl  metadata.json  part.tbl  supplier.tbl
resources/data/metadata/: ssb.json  ssb_int.json  tpcds.json  tpcds_int.json  tpcds_int_3t.json  tpch.json  tpch_int.json
resources/data/tpcds_md/: call_center.metadata.json  catalog_page.metadata.json  catalog_returns.metadata.json  catalog_sales.metadata.json  combine.py  customer.metadata.json  customer_address.metadata.json  customer_demographics.metadata.json  date_dim.metadata.json  household_demographics.metadata.json  income_band.metadata.json  inventory.metadata.json  item.metadata.json  promotion.metadata.json  reason.metadata.json  ship_mode.metadata.json  store.metadata.json  store_returns.metadata.json  store_sales.metadata.json  time_dim.metadata.json  warehouse.metadata.json  web_page.metadata.json  web_returns.metadata.json  web_sales.metadata.json  web_site.metadata.json
resources/sql/exp/: join1-konly.sql  join1-nopld.sql  join1.sql  join2-konly.sql  join2-nopld.sql  join2.sql  join3-3flt.sql  join3-konly.sql  join3-nopld.sql  join3.sql  join4-nopld.sql  join4.sql
resources/sql/ssb/: ssb21a.sql  ssb22a.sql  ssb23a.sql
resources/sql/tpcds/: 3.sql  42.sql
runtime/: CMakeLists.txt
runtime/include/: WrappedLLVMEngine.h  base_worker.h  knl_executor.h  knl_util.cuh  shfl_server.h  util.h
runtime/src/: CMakeLists.txt  cpu_worker.cc  csv_convert.cc  gpu_worker.cc  knl_executor.cu  mem_server.cc
scripts/: analyze_plans.py  bw_predict.py  e2e_allq.sh  enumerate_plans.py  heuristic.py  plans_all.sh  regular.py  scalability_all.sh  search_plans.sh  throughput.py
spark-test/: ssb.py
