add_executable(mem_server mem_server.cc)
set_target_properties(mem_server PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(mem_server PRIVATE Arrow::arrow_shared)
target_link_libraries(mem_server PRIVATE ArrowFlight::arrow_flight_shared)

add_executable(cpu_worker cpu_worker.cc)
set_target_properties(cpu_worker PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(cpu_worker Arrow::arrow_shared)
target_link_libraries(cpu_worker ArrowFlight::arrow_flight_shared)
target_link_libraries(cpu_worker lingo_runtime MLIRExecutionEngine)
target_link_libraries(cpu_worker MPI::MPI_CXX)
target_link_libraries(cpu_worker ArrowAcero::arrow_acero_shared)
target_link_options(cpu_worker PRIVATE -export-dynamic)

add_library(knl_executor knl_executor.cu)
target_link_libraries(knl_executor PRIVATE CUDA::cuda_driver)
set_target_properties(knl_executor PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
target_include_directories(knl_executor PUBLIC /cuCollections/include/)


add_executable(gpu_worker gpu_worker.cc)
set_target_properties(gpu_worker PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(gpu_worker Arrow::arrow_shared)
target_link_libraries(gpu_worker ArrowFlight::arrow_flight_shared)
# target_link_libraries(gpu_worker CUDA::cudart )
target_link_libraries(gpu_worker CUDA::nvrtc CUDA::cuda_driver)
target_link_libraries(gpu_worker knl_executor)
target_link_libraries(gpu_worker MPI::MPI_CXX)
target_link_options(gpu_worker PRIVATE -export-dynamic)
# target_include_directories(gpu_worker PRIVATE /cuCollections/include/)

add_executable(csv_convert csv_convert.cc)
set_target_properties(csv_convert PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
target_link_libraries(csv_convert Arrow::arrow_shared)
target_link_libraries(csv_convert ArrowFlight::arrow_flight_shared)
target_link_libraries(csv_convert lingo_runtime)